--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "clean-webpack-plugin": "^4.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "nodemon": "^2.0.16",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
